# hyprdly

./: .gitignore  Cargo.toml  dist-workspace.toml
src/: download.rs  download_builder.rs  main.rs  utils.rs
